feat: global.css 설정 추가
이슈 번호: #14

- button, input에 default css 속성 추가

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -30,3 +30,12 @@
 body {
     font-family: 'NEXON Lv1 Gothic OTF';
 }
+
+button {
+    outline: none;
+    cursor: pointer;
+}
+
+input {
+    outline: none;
+}
