--- a/frontend/src/pages/PostWritePage/PostWritePage.css
+++ b/frontend/src/pages/PostWritePage/PostWritePage.css
@@ -1,3 +1,10 @@
 .quill {
-    @apply flex-1;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.ql-container {
+    overflow-y: scroll;
+    flex-grow: 1;
 }
